# steamroller

./: .gitignore
steam_analyser/betfair_analysis/: .gitignore  pyproject.toml
steam_analyser/betfair_analysis/scripts/: plot_odds.py  plot_odds_config.ini  test_odds_plotter.py  test_odds_saver.py
steam_analyser/betfair_analysis/src/betfair_analysis/data/: definitions.py
steam_analyser/betfair_analysis/src/betfair_analysis/tools/: odds_extractor.py  odds_plotter.py  odds_saver.py
steam_analyser/betfair_analysis/tools/: print_market_details.py
